feat(page): adding path to topbar partial layout

--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,22 @@
     <title>Hicaro&#39;s website</title>
   </head>
   <body>
-    <nav class="sidebar">
-      <div class="profile">
-        <!-- TODO: get profile picture path / link to insert here -->
-        <img src="https://via.placeholder.com/50" alt=""/>
-        <div class="description">
-          <p class="name">Hícaro Dânrlley</p>
-          <p class="role">Software engineer</p>
-        </div>
-      </div>
+    <nav class="topbar">
+  <div class="me">
+    <!-- TODO: get profile picture path / link to insert here -->
+    <img src="https://via.placeholder.com/50" alt=""/>
+    <p class="name">Hícaro Dânrlley</p>
+  </div>
 
-      <ul class="items">
-        <!-- TODO: this could be a loop that reads data from the template stuff and then links to the proper sections -->
-        <li class="item"><a href="#">About</a></li>
-        <li class="item"><a href="#">Resume</a></li>
-        <li class="item"><a href="#">Projects</a></li>
-        <li class="item"><a href="#">Blog</a></li>
-        <li class="item"><a href="#">CV</a></li>
-      </ul>
-    </nav>
+  <ul class="items">
+    <!-- TODO: this could be a loop that reads data from the template stuff and then links to the proper sections -->
+    <li class="item"><a href="#">Resume</a></li>
+    <li class="item"><a href="#">Projects</a></li>
+    <li class="item"><a href="#">Blog</a></li>
+    <li class="item"><a href="#">CV</a></li>
+  </ul>
+</nav>
+
     <main>
       <h1>Welcome to Hícaro's website</h1>
     </main>
