feat(page): new method for getting the config json

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <!-- TODO: get list of CSS and JS file path and insert here automatically with a loop -->
     <link rel="stylesheet" href="../assets/css/globals.css" type="text/css" media="all">
     <link rel="stylesheet" href="../assets/css/sidebar.css" type="text/css" media="all">
-    <title>Hicaro&#39;s website</title>
+    <title>Hícaro</title>
   </head>
   <body>
     <nav class="topbar">
@@ -27,6 +27,7 @@
   <hr>
 </nav>
 
+    <!-- TODO: -->
     <main>
       <h1>Welcome to Hícaro's website</h1>
     </main>
