--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: get list of CSS and JS file path and insert here automatically with a loop -->
-    <link rel="stylesheet" href="../assets/css/globals.css" type="text/css" media="all">
-    <link rel="stylesheet" href="../assets/css/sidebar.css" type="text/css" media="all">
+
+          <link rel="stylesheet" href=../assets/css/globals.css type="text/css" media="all">
+          <link rel="stylesheet" href=../assets/css/topbar.css type="text/css" media="all">
+    
     <title>Hícaro</title>
   </head>
   <body>
@@ -27,7 +28,7 @@
   <hr>
 </nav>
 
-    <!-- TODO: -->
+    <!-- TODO: add proper content here -->
     <main>
       <h1>Welcome to Hícaro's website</h1>
     </main>
