feat(layout): tweaking default page layout

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     <nav class="topbar">
+  <!-- TODO: get profile picture path / link to insert here -->
   <div class="me">
-    <!-- TODO: get profile picture path / link to insert here -->
     <img src="https://via.placeholder.com/50" alt=""/>
-    <p class="name">Hícaro Dânrlley</p>
+    <h1 class="name">Hícaro Dânrlley</h1>
   </div>
 
   <!-- TODO: this could be a loop that reads data from the template stuff and then links to the proper sections -->
@@ -24,9 +24,9 @@
     <li class="item"><a href="#">Blog</a></li>
     <li class="item"><a href="#">CV</a></li>
   </ul>
-
-  <hr>
 </nav>
+
+<hr>
 
     <!-- TODO: add proper content here -->
     <main>
