feat(topbar): divider line

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>Hícaro</title>
   </head>
   <body>
-    <nav class="topbar">
+    <nav id="topbar">
   <!-- TODO: get profile picture path / link to insert here -->
   <div class="me">
     <img src="https://via.placeholder.com/50" alt=""/>
@@ -26,7 +26,7 @@
   </ul>
 </nav>
 
-<hr>
+<hr id="navbar-line">
 
     <!-- TODO: add proper content here -->
     <main>
