feat(topbar): adding profile picture

--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="stylesheet"
-      href="../assets/css/globals.css"
-      type="text/css"
-      media="all"
-    />
-    <link
-      rel="stylesheet"
-      href="../assets/css/topbar.css"
-      type="text/css"
-      media="all"
-    />
-
+          <link rel="stylesheet" href="../assets/css/globals.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="../assets/css/topbar.css" type="text/css" media="all" />
+    
     <title>Hícaro</title>
   </head>
   <body>
     <nav id="topbar">
-      <!-- TODO: get profile picture path / link to insert here -->
-      <div class="me">
-        <img src="https://via.placeholder.com/55" alt="" />
-        <p class="name"><a href="#">Hícaro Dânrlley</a></p>
-      </div>
+  <!-- TODO: get profile picture path / link to insert here -->
+  <div class="me">
+    <img src="/home/hicaro/Documentos/Projects/hicaro/assets/images/me.png" alt="profile-pic"/>
+    <p class="name"><a href="#">Hícaro Dânrlley</a></p>
+  </div>
 
-      <!-- TODO: this could be a loop that reads data from the template stuff and then links to the proper sections -->
-      <ul class="items">
-        <li class="item"><a href="#">Resume</a></li>
-        <li class="item"><a href="#">Projects</a></li>
-        <li class="item"><a href="#">Blog</a></li>
-        <li class="item"><a href="#">CV</a></li>
-      </ul>
-    </nav>
+  <!-- TODO: this could be a loop that reads data from the template stuff and then links to the proper sections -->
+  <ul class="items">
+    <li class="item"><a href="#">Resume</a></li>
+    <li class="item"><a href="#">Projects</a></li>
+    <li class="item"><a href="#">Blog</a></li>
+    <li class="item"><a href="#">CV</a></li>
+  </ul>
+</nav>
 
-    <hr id="navbar-line" />
+<hr id="navbar-line">
 
     <!-- TODO: add proper content here -->
     <main>
