refactor(generator): removing unnecessary usage of `cwd` in some parts

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <body>
     <nav id="topbar">
   <div class="me">
-    <img src="/home/hicaro/Documentos/Projects/hicaro/assets/images/me.png" alt="profile-pic"/>
+    <img src="../assets/images/me.png" alt="profile-pic"/>
     <p class="name"><a href="#">Hícaro Dânrlley</a></p>
   </div>
 
