feat(home): separating home content into its own ejs file

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
           <link rel="stylesheet" href="../assets/css/globals.css" type="text/css" media="all" />
           <link rel="stylesheet" href="../assets/css/topbar.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="../assets/css/home.css" type="text/css" media="all" />
     
     <title>Hícaro</title>
   </head>
@@ -27,9 +28,10 @@
 
 <hr id="navbar-line">
 
-    <!-- TODO: add proper content here -->
-    <main>
-      <h1>Welcome to Hícaro's website</h1>
-    </main>
+    <!-- TODO: This 'include' will change based on the page the user selected -->
+    <main id="home">
+  <h1>Welcome to Hícaro's website</h1>
+</main>
+
   </body>
 </html>
