fix(project): change link to home to `index.html`

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <nav id="topbar">
   <div class="me">
     <img src="../assets/images/me.png" alt="profile-pic" />
-    <p class="name"><a href="home.html">Hícaro Dânrlley</a></p>
+    <p class="name"><a href="index.html">Hícaro Dânrlley</a></p>
   </div>
 
   <ul class="items">
