--- a/public/cv.html
+++ b/public/cv.html
@@ -14,14 +14,14 @@
     <nav id="topbar">
   <div class="me">
     <img src="assets/images/me.png" alt="profile-pic" />
-    <p class="name"><a href="index.html">Hícaro Dânrlley</a></p>
+    <p class="name"><a href="index">Hícaro Dânrlley</a></p>
   </div>
 
   <ul class="items">
-      <li class="item"><a href="resume.html">Resume</a></li>
-      <li class="item"><a href="projects.html">Projects</a></li>
-      <li class="item"><a href="blog.html">Blog</a></li>
-      <li class="item"><a href="cv.html">CV</a></li>
+      <li class="item"><a href="resume">Resume</a></li>
+      <li class="item"><a href="projects">Projects</a></li>
+      <li class="item"><a href="blog">Blog</a></li>
+      <li class="item"><a href="cv">CV</a></li>
     </ul>
 </nav>
 
