--- a/public/resume.html
+++ b/public/resume.html
@@ -14,7 +14,7 @@
     <nav id="topbar">
   <div class="me">
     <img src="assets/images/me.png" alt="profile-pic" />
-    <p class="name"><a href="index">Hícaro Dânrlley</a></p>
+    <p class="name"><a href="/">Hícaro Dânrlley</a></p>
   </div>
 
   <ul class="items">
