--- a/public/resume.html
+++ b/public/resume.html
@@ -8,7 +8,7 @@
           <link rel="stylesheet" href="assets/css/topbar.css" type="text/css" media="all" />
           <link rel="stylesheet" href="assets/css/home.css" type="text/css" media="all" />
     
-    <title>Hícaro</title>
+    <title>Hícaro Dânrlley</title>
   </head>
   <body>
     <nav id="topbar">
