feat(home): adding home initial content

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,15 @@
 
 
 <main id="home">
-  <h1>Welcome to Hícaro's website</h1>
+  <div class="intro">
+    <img class="personal-pic" src="./assets/images/me_2.jpeg" />
+    <div class="info">
+      <p>Hello, I'm</p>
+      <p id="name">Hícaro Dânrlley</h1>
+      <p>Software engineer</p>
+    </div>
+    <!-- TODO: maybe get a list of strings that represents my self description --!>
+  </div>
 </main>
   </body>
 </html>
