--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
           <link rel="stylesheet" href="assets/css/globals.css" type="text/css" media="all" />
           <link rel="stylesheet" href="assets/css/topbar.css" type="text/css" media="all" />
           <link rel="stylesheet" href="assets/css/home.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="assets/css/resume.css" type="text/css" media="all" />
     
     <title>Hícaro Dânrlley</title>
   </head>
@@ -14,14 +15,14 @@
     <nav id="topbar">
   <div class="me">
     <img src="assets/images/me.png" alt="profile-pic" />
-    <p class="name"><a href="/">Hícaro Dânrlley</a></p>
+    <p class="name link"><a href="/">Hícaro Dânrlley</a></p>
   </div>
 
   <ul class="items">
-      <li class="item"><a href="resume">Resume</a></li>
-      <li class="item"><a href="projects">Projects</a></li>
-      <li class="item"><a href="blog">Blog</a></li>
-      <li class="item"><a href="cv">CV</a></li>
+      <li class="item link"><a href="resume">Resume</a></li>
+      <li class="item link"><a href="projects">Projects</a></li>
+      <li class="item link"><a href="blog">Blog</a></li>
+      <li class="item link"><a href="cv">CV</a></li>
     </ul>
 </nav>
 
