--- a/public/resume.html
+++ b/public/resume.html
@@ -7,6 +7,7 @@
           <link rel="stylesheet" href="assets/css/globals.css" type="text/css" media="all" />
           <link rel="stylesheet" href="assets/css/topbar.css" type="text/css" media="all" />
           <link rel="stylesheet" href="assets/css/home.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="assets/css/resume.css" type="text/css" media="all" />
     
     <title>Hícaro Dânrlley</title>
   </head>
@@ -14,14 +15,14 @@
     <nav id="topbar">
   <div class="me">
     <img src="assets/images/me.png" alt="profile-pic" />
-    <p class="name"><a href="/">Hícaro Dânrlley</a></p>
+    <p class="name link"><a href="/">Hícaro Dânrlley</a></p>
   </div>
 
   <ul class="items">
-      <li class="item"><a href="resume">Resume</a></li>
-      <li class="item"><a href="projects">Projects</a></li>
-      <li class="item"><a href="blog">Blog</a></li>
-      <li class="item"><a href="cv">CV</a></li>
+      <li class="item link"><a href="resume">Resume</a></li>
+      <li class="item link"><a href="projects">Projects</a></li>
+      <li class="item link"><a href="blog">Blog</a></li>
+      <li class="item link"><a href="cv">CV</a></li>
     </ul>
 </nav>
 
@@ -29,7 +30,63 @@
 
 
 <main id="resume">
-  <h1>Welcome to Hícaro's resume</h1>
+  <p id="about-me" class="section"><a href="#about-me">#</a> About me</p>
+  <p>
+  I&#39;m a 🇧🇷 brazilian software engineer with more than 3 years of
+  experience and Computer Science student at Universidade Federal de Alagoas
+  (UFAL).
+  </p>
+
+  <p>
+  More especifically, I am a mobile and backend developer. I am
+  currently working at Otimize, a Brazilian startup that is pioneering the use
+  of technology to evaluate human movement kinematics.
+  </p>
+
+  <p>
+  I also love
+  compilers. My main personal project is a compiler for my own programming
+  language called &quot;idk&quot;. This compiler is being written in Rust with
+  hand-written lexical, syntactic, and semantic algorithms. Currently, I&#39;m
+  planning to use LLVM to build the backend in order to produce fast and
+  optimized code for several platforms. About the language&#39;s syntax, I got
+  inspiration from other languages, such as Python, Rust, Go, and Odin. Soon it
+  will be open-source so I can hopefully receive help from more experienced
+  compiler developers on the Internet.
+  </p>
+
+  <p>
+  During my spare time, I have made sporadic contributions to open-source
+  developer tools, such as telescope.nvim (fuzzy finder for the Neovim text
+  editor written in Lua) and quick-lint-js (a JavaScript linter written in
+  C++).
+  </p>
+
+  <p id="skills" class="section"><a href="#skills">#</a> Skills</p>
+
+  <ul>
+    <li>
+    Experience as a back-end developer with Python, Go and other technologies,
+    and as a cross-platform mobile app developer with Flutter.
+    </li>
+    <br>
+    <li>
+    Skills in several programming languages, including Python, Typescript
+    (NodeJS), Java, Dart, Rust and Go. Thanks to my problem-solving skills, I
+    have great ease and flexibility in switching between programming languages
+    and frameworks according to the task's requirements.
+    </li> 
+    <br>
+    <li>
+    Fluent in conversational English and with advanced writing skills. I'm EC2
+    Proficient in the EF Standard English Test.
+    </li> 
+    <br>
+    <li>
+    Computer Science student at UFAL, with a strong interest in analysis and
+    performance of algorithms, compilers and software architecture.
+    </li>
+  </ul>
 </main>
   </body>
 </html>
