deploy: building production files

--- a/public/blog.html
+++ b/public/blog.html
@@ -15,14 +15,14 @@
     <nav id="topbar">
   <div class="me">
     <img src="assets/images/me.png" alt="profile-pic" />
-    <p class="name link"><a href="/">Hícaro Dânrlley</a></p>
+    <p class="name"><a class="link" href="/">Hícaro Dânrlley</a></p>
   </div>
 
   <ul class="items">
-      <li class="item link"><a href="resume">Resume</a></li>
-      <li class="item link"><a href="projects">Projects</a></li>
-      <li class="item link"><a href="blog">Blog</a></li>
-      <li class="item link"><a href="cv">CV</a></li>
+      <li class="item"><a class="link" href="resume">Resume</a></li>
+      <li class="item"><a class="link" href="projects">Projects</a></li>
+      <li class="item"><a class="link" href="blog">Blog</a></li>
+      <li class="item"><a class="link" href="cv">CV</a></li>
     </ul>
 </nav>
 
