--- a/public/resume.html
+++ b/public/resume.html
@@ -15,14 +15,14 @@
     <nav id="topbar">
   <div class="me">
     <img src="assets/images/me.png" alt="profile-pic" />
-    <p class="name link"><a href="/">Hícaro Dânrlley</a></p>
+    <p class="name"><a class="link" href="/">Hícaro Dânrlley</a></p>
   </div>
 
   <ul class="items">
-      <li class="item link"><a href="resume">Resume</a></li>
-      <li class="item link"><a href="projects">Projects</a></li>
-      <li class="item link"><a href="blog">Blog</a></li>
-      <li class="item link"><a href="cv">CV</a></li>
+      <li class="item"><a class="link" href="resume">Resume</a></li>
+      <li class="item"><a class="link" href="projects">Projects</a></li>
+      <li class="item"><a class="link" href="blog">Blog</a></li>
+      <li class="item"><a class="link" href="cv">CV</a></li>
     </ul>
 </nav>
 
@@ -57,9 +57,12 @@
 
   <p>
   During my spare time, I have made sporadic contributions to open-source
-  developer tools, such as telescope.nvim (fuzzy finder for the Neovim text
-  editor written in Lua) and quick-lint-js (a JavaScript linter written in
-  C++).
+  developer tools, such as <a
+  href="https://github.com/nvim-telescope/telescope.nvim"
+  class="link" target="_blank">telescope.nvim (fuzzy finder for the Neovim text editor written
+  in Lua)</a> and <a class="link"
+  href="https://github.com/quick-lint/quick-lint-js" target="_blank">quick-lint-js (a
+  JavaScript linter written in C++)</a>.
   </p>
 
   <p id="skills" class="section"><a href="#skills">#</a> Skills</p>
@@ -75,12 +78,13 @@
     (NodeJS), Java, Dart, Rust and Go. Thanks to my problem-solving skills, I
     have great ease and flexibility in switching between programming languages
     and frameworks according to the task's requirements.
-    </li> 
+    </li>
     <br>
     <li>
-    Fluent in conversational English and with advanced writing skills. I'm EC2
-    Proficient in the EF Standard English Test.
-    </li> 
+    Fluent in conversational English and with advanced writing skills. <a class="link"
+    href="https://www.efset.org/cert/gpUeom" target="_blank">I'm EC2 Proficient in the EF
+    Standard English Test</a>.
+    </li>
     <br>
     <li>
     Computer Science student at UFAL, with a strong interest in analysis and
