--- a/public/cv.html
+++ b/public/cv.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
           <link rel="stylesheet" href="assets/css/globals.css" type="text/css" media="all" />
           <link rel="stylesheet" href="assets/css/topbar.css" type="text/css" media="all" />
           <link rel="stylesheet" href="assets/css/home.css" type="text/css" media="all" />
           <link rel="stylesheet" href="assets/css/resume.css" type="text/css" media="all" />
-    
+        <link rel="shortcut icon" href="assets/images/me.png" type="image/x-icon">
     <title>Hícaro Dânrlley</title>
   </head>
   <body>
