refactor(style): generic unordered list style

--- a/public/resume.html
+++ b/public/resume.html
@@ -59,7 +59,7 @@
 
   <div class="section">
     <p id="skills" class="section-title"><a href="#skills">#</a> Skills</p>
-    <ul>
+    <ul class="list">
       <li>
       Experience as a back-end developer with Python, Go and other technologies,
       and as a cross-platform mobile app developer with Flutter.
