--- a/public/resume.html
+++ b/public/resume.html
@@ -41,10 +41,12 @@
     currently working at Otimize, a Brazilian startup that is pioneering the use
     of technology to evaluate human movement kinematics.
     </p>
-    <p>
-    I also love compilers. My main personal project is a compiler for my own
-    programming language called <i>idk</i>. This compiler is being written
-    in Rust with hand-written lexical, syntactic, and semantic algorithms. 
+    <p> 
+    I also love compilers. My main personal project is a compiler for my
+    own programming language called <i>idk</i>. This compiler is being written
+    in the <a class="link" href="https://www.rust-lang.org/"
+    target="_blank">Rust programming language</a> with hand-written lexical,
+    syntactic, and semantic algorithms.
     </p>
     <p>
     During my spare time, I have made sporadic contributions to open-source
