chore: formatting EJS code with Prettier

--- a/public/resume.html
+++ b/public/resume.html
@@ -42,32 +42,45 @@
 
 <main id="resume">
   <div class="section">
-    <p id="about-me" class="section-title"><a href="#about-me">#</a> About me</p>
-    <p>
-    I&#39;m a 🇧🇷 brazilian software engineer with more than 3 years of
-    experience and Computer Science student at Universidade Federal de Alagoas
-    (UFAL).
+    <p id="about-me" class="section-title">
+      <a href="#about-me">#</a> About me
     </p>
     <p>
-    More especifically, I am a mobile and backend developer. I am
-    currently working at Otimize, a Brazilian startup that is pioneering the use
-    of technology to evaluate human movement kinematics.
-    </p>
-    <p> 
-    I also love compilers. My main personal project is a compiler for my
-    own programming language called <i>idk</i>. This compiler is being written
-    in the <a class="link" href="https://www.rust-lang.org/"
-    target="_blank">Rust programming language</a> with hand-written lexical,
-    syntactic, and semantic algorithms.
+      I&#39;m a 🇧🇷 brazilian software engineer with more than 3 years of
+      experience and Computer Science student at Universidade Federal de Alagoas
+      (UFAL).
     </p>
     <p>
-    During my spare time, I have made sporadic contributions to open-source
-    developer tools, such as <a
-    href="https://github.com/nvim-telescope/telescope.nvim"
-    class="link" target="_blank">telescope.nvim (fuzzy finder for the Neovim text editor written
-    in Lua)</a> and <a class="link"
-    href="https://github.com/quick-lint/quick-lint-js" target="_blank">quick-lint-js (a
-    JavaScript linter written in C++)</a>.
+      More especifically, I am a mobile and backend developer. I am currently
+      working at Otimize, a Brazilian startup that is pioneering the use of
+      technology to evaluate human movement kinematics.
+    </p>
+    <p>
+      I also love compilers. My main personal project is a compiler for my own
+      programming language called <i>idk</i>. This compiler is being written in
+      the
+      <a class="link" href="https://www.rust-lang.org/" target="_blank"
+        >Rust programming language</a
+      >
+      with hand-written lexical, syntactic, and semantic algorithms.
+    </p>
+    <p>
+      During my spare time, I have made sporadic contributions to open-source
+      developer tools, such as
+      <a
+        href="https://github.com/nvim-telescope/telescope.nvim"
+        class="link"
+        target="_blank"
+        >telescope.nvim (fuzzy finder for the Neovim text editor written in
+        Lua)</a
+      >
+      and
+      <a
+        class="link"
+        href="https://github.com/quick-lint/quick-lint-js"
+        target="_blank"
+        >quick-lint-js (a JavaScript linter written in C++)</a
+      >.
     </p>
   </div>
 
@@ -75,26 +88,27 @@
     <p id="skills" class="section-title"><a href="#skills">#</a> Skills</p>
     <ul class="list">
       <li>
-      Experience as a back-end developer with Python, Go and other technologies,
-      and as a cross-platform mobile app developer with Flutter.
+        Experience as a back-end developer with Python, Go and other
+        technologies, and as a cross-platform mobile app developer with Flutter.
       </li>
-      <br>
+      <br />
       <li>
-      Skills in several programming languages, including Python, Typescript
-      (NodeJS), Java, Dart, Rust and Go. Thanks to my problem-solving skills, I
-      have great ease and flexibility in switching between programming languages
-      and frameworks according to the task's requirements.
+        Skills in several programming languages, including Python, Typescript
+        (NodeJS), Java, Dart, Rust and Go. Thanks to my problem-solving skills,
+        I have great ease and flexibility in switching between programming
+        languages and frameworks according to the task's requirements.
       </li>
-      <br>
+      <br />
       <li>
-      Fluent in conversational English and with advanced writing skills. <a class="link"
-      href="https://www.efset.org/cert/gpUeom" target="_blank">I'm EC2 Proficient in the EF
-      Standard English Test</a>.
+        Fluent in conversational English and with advanced writing skills.
+        <a class="link" href="https://www.efset.org/cert/gpUeom" target="_blank"
+          >I'm EC2 Proficient in the EF Standard English Test</a
+        >.
       </li>
-      <br>
+      <br />
       <li>
-      Computer Science student at UFAL, with a strong interest in analysis and
-      performance of algorithms, compilers and software architecture.
+        Computer Science student at UFAL, with a strong interest in analysis and
+        performance of algorithms, compilers and software architecture.
       </li>
     </ul>
   </div>
