feat(codeblocks): adding code block support with `highlight.js`

--- a/_posts/my-first-post.html
+++ b/_posts/my-first-post.html
@@ -22,3 +22,10 @@
     molestiae minus blanditiis totam labore illum rem dignissimos alias.
   </p>
 </div>
+
+<div class="codeblocks">
+  <pre><code>
+if True:
+  print("Hello, world!")
+  </code></pre>
+</div>
