--- a/public/blog.html
+++ b/public/blog.html
@@ -46,6 +46,20 @@
     />
     <title>Hícaro Dânrlley</title>
     <script src="/assets/js/posts.js" defer></script>
+
+    <!-- https://highlightjs.org/ for syntax highlighting -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/vs2015.css"
+    />
+    <script>
+      hljs.highlightAll();
+    </script>
   </head>
   <body>
     <nav id="topbar">
@@ -75,7 +89,7 @@
           <a class="link" href="my-first-post">My first post</a>
         </h1>
         <p>That&#39;s my first post description</p>
-        <p class="date">12/02/2024</p>
+        <p class="date">12/03/2024</p>
         <div class="tags">
           <p><a class="link" href="#">#rust</a></p>
           <p><a class="link" href="#">#web</a></p>
