--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,20 @@
     />
     <title>Hícaro Dânrlley</title>
     <script src="/assets/js/posts.js" defer></script>
+
+    <!-- https://highlightjs.org/ for syntax highlighting -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/vs2015.css"
+    />
+    <script>
+      hljs.highlightAll();
+    </script>
   </head>
   <body>
     <nav id="topbar">
