--- a/public/my-first-post.html
+++ b/public/my-first-post.html
@@ -46,6 +46,20 @@
     />
     <title>Hícaro Dânrlley</title>
     <script src="/assets/js/posts.js" defer></script>
+
+    <!-- https://highlightjs.org/ for syntax highlighting -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/vs2015.css"
+    />
+    <script>
+      hljs.highlightAll();
+    </script>
   </head>
   <body>
     <nav id="topbar">
@@ -98,6 +112,13 @@
           consequatur corporis molestiae minus blanditiis totam labore illum rem
           dignissimos alias.
         </p>
+      </div>
+
+      <div class="codeblocks">
+        <pre><code>
+if True:
+  print("Hello, world!")
+  </code></pre>
       </div>
 
       <hr class="line" />
