feat: changing titles, css and more
- `Work` to `Work experience` on resume section
- Adding warning about not editing the HTML files
- Justifying text on resume section
- Changing about me description
- Adding Telia to list of projects

--- a/public/my-first-post.html
+++ b/public/my-first-post.html
@@ -1,9 +1,11 @@
+<!-- WARNING: FILE GENERATED PROGRAMMATICALLY. DO NOT EDIT! -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
           <link rel="stylesheet" href="/assets/css/blog.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="/assets/css/footer.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/globals.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/home.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/post.css" type="text/css" media="all" />
@@ -45,8 +47,10 @@
 
 
 <main id="post">
-  <h1 class="title">My first post</h1>
-  <hr class="line" />
+  <div class="header">
+    <h1 class="title">My first post</h1>
+    <p class="created-at">Hícaro Dânrlley — 06/04/2024</p>
+  </div>
   <h1>Hello from first post</h1>
 <div class="block note">
   <p>
@@ -97,8 +101,14 @@ def download(directory, filename):
   </code></pre>
 </div>
 
-  <hr class="line" />
 </main>
+<hr class="line" />
+<div id="footer">
+  <div class="me">
+    <img src="/assets/images/me.png" alt="profile-pic" />
+  </div>
+</div>
+
   </body>
 </html>
 
