--- a/public/projects.html
+++ b/public/projects.html
@@ -1,9 +1,11 @@
+<!-- WARNING: FILE GENERATED PROGRAMMATICALLY. DO NOT EDIT! -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
           <link rel="stylesheet" href="/assets/css/blog.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="/assets/css/footer.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/globals.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/home.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/post.css" type="text/css" media="all" />
@@ -54,8 +56,17 @@
       licensed under the MIT license. Use at your own risk.
     </p>
 
-    <!-- TODO: could I automate this?? -->
     <ul class="list">
+      <li>
+        Telia is a statically and strongly typed programming language inspired
+        on modern languages, such as Python, Go and Rust. It is compiled to
+        native and efficient machine code using <a class="link"
+        href="https://llvm.org/">LLVM</a>. Telia is still pretty imature and
+        not ready to use.
+      </li>
+
+      <br />
+
       <li>
         <a
           class="link"
