--- a/public/resume.html
+++ b/public/resume.html
@@ -1,9 +1,11 @@
+<!-- WARNING: FILE GENERATED PROGRAMMATICALLY. DO NOT EDIT! -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
           <link rel="stylesheet" href="/assets/css/blog.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="/assets/css/footer.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/globals.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/home.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/post.css" type="text/css" media="all" />
@@ -45,7 +47,7 @@
 
 
 <main id="resume">
-  <div class="section">
+  <div class="section about-me">
     <p id="about-me" class="section-title">
       <a href="#about-me">#</a> About me
     </p>
@@ -61,12 +63,7 @@
     </p>
     <p>
       I also love compilers. My main personal project is a compiler for my own
-      programming language called <i>Telia</i>. This compiler is being written
-      in the
-      <a class="link" href="https://www.rust-lang.org/" target="_blank"
-        >Rust programming language</a
-      >
-      with hand-written lexical, syntactic, and semantic algorithms.
+      programming language called <i>Telia</i>.
     </p>
     <p>
       During my spare time, I have made sporadic contributions to open-source
@@ -118,7 +115,7 @@
   </div>
 
   <div class="section">
-    <p id="work" class="section-title"><a href="#work">#</a> Work</p>
+    <p id="work" class="section-title"><a href="#work">#</a> Work experience</p>
     <div class="work-item">
       <div class="work-location">
         <p>Otimize Tech</p>
