--- a/public/blog.html
+++ b/public/blog.html
@@ -1,9 +1,11 @@
+<!-- WARNING: FILE GENERATED PROGRAMMATICALLY. DO NOT EDIT! -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
           <link rel="stylesheet" href="/assets/css/blog.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="/assets/css/footer.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/globals.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/home.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/post.css" type="text/css" media="all" />
@@ -50,7 +52,7 @@
       <a class="link" href="my-first-post">My first post</a>
     </h1>
     <p>That&#39;s my first post description</p>
-    <p class="date">23/03/2024</p>
+    <p class="date">06/04/2024</p>
     <div class="tags">
             <p><a class="link" href="#">#rust</a></p>
             <p><a class="link" href="#">#web</a></p>
@@ -62,7 +64,7 @@
       <a class="link" href="my-second-post">My second blog post</a>
     </h1>
     <p>That&#39;s my second post description</p>
-    <p class="date">12/02/2024</p>
+    <p class="date">06/04/2024</p>
     <div class="tags">
             <p><a class="link" href="#">#cpp</a></p>
           </div>
