--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
+<!-- WARNING: FILE GENERATED PROGRAMMATICALLY. DO NOT EDIT! -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
           <link rel="stylesheet" href="/assets/css/blog.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="/assets/css/footer.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/globals.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/home.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/post.css" type="text/css" media="all" />
