--- a/public/my-second-post.html
+++ b/public/my-second-post.html
@@ -1,9 +1,11 @@
+<!-- WARNING: FILE GENERATED PROGRAMMATICALLY. DO NOT EDIT! -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
           <link rel="stylesheet" href="/assets/css/blog.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="/assets/css/footer.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/globals.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/home.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/post.css" type="text/css" media="all" />
@@ -45,12 +47,20 @@
 
 
 <main id="post">
-  <h1 class="title">My second blog post</h1>
-  <hr class="line" />
-  <h1>Hello from second post</h1>
+  <div class="header">
+    <h1 class="title">My second blog post</h1>
+    <p class="created-at">Hícaro Dânrlley — 06/04/2024</p>
+  </div>
+  <h2>Hello from second post</h2>
 
-  <hr class="line" />
 </main>
+<hr class="line" />
+<div id="footer">
+  <div class="me">
+    <img src="/assets/images/me.png" alt="profile-pic" />
+  </div>
+</div>
+
   </body>
 </html>
 
