feat: releasing new website version

--- a/public/cv.html
+++ b/public/cv.html
@@ -43,12 +43,24 @@
   </ul>
 </nav>
 
-<hr class="line" />
+<hr class="line topbar-line" />
 
 
 <main id="cv">
   <h1>Welcome to Hícaro's CV</h1>
 </main>
+  <hr class="line footer-line" />
+<div id="footer">
+  <div class="socials">
+    <a href="https://www.linkedin.com/in/hicaromiguel/" target="_blank">
+      <img class="icon" src="assets/icons/linkedin.svg" alt="linkedin">
+    </a>
+    <a href="mailto:hdanrlley1@gmail.com" target="_blank">
+      <img class="icon" src="assets/icons/gmail.svg" alt="e-mail">
+    </a>
+  </div>
+</div>
+
   </body>
 </html>
 
