--- a/public/index.html
+++ b/public/index.html
@@ -43,18 +43,30 @@
   </ul>
 </nav>
 
-<hr class="line" />
+<hr class="line topbar-line" />
 
 
 <main id="home">
   <div class="intro">
     <div class="info">
       <p id="name">Hícaro Dânrlley</p>
-      <p id="description">Software engineer. Brazilian. Passionate by compilers, Counter-Strike and competition.</p>
+      <p id="description">Software engineer. Brazilian. Passionate by compilers and Counter-Strike.</p>
     </div>
     <img class="personal-pic" src="/assets/images/me_2.jpeg" />
   </div>
 </main>
+  <hr class="line footer-line" />
+<div id="footer">
+  <div class="socials">
+    <a href="https://www.linkedin.com/in/hicaromiguel/" target="_blank">
+      <img class="icon" src="assets/icons/linkedin.svg" alt="linkedin">
+    </a>
+    <a href="mailto:hdanrlley1@gmail.com" target="_blank">
+      <img class="icon" src="assets/icons/gmail.svg" alt="e-mail">
+    </a>
+  </div>
+</div>
+
   </body>
 </html>
 
