--- a/public/my-first-post.html
+++ b/public/my-first-post.html
@@ -43,7 +43,7 @@
   </ul>
 </nav>
 
-<hr class="line" />
+<hr class="line topbar-line" />
 
 
 <main id="post">
@@ -102,10 +102,15 @@ def download(directory, filename):
 </div>
 
 </main>
-<hr class="line" />
+  <hr class="line footer-line" />
 <div id="footer">
-  <div class="me">
-    <img src="/assets/images/me.png" alt="profile-pic" />
+  <div class="socials">
+    <a href="https://www.linkedin.com/in/hicaromiguel/" target="_blank">
+      <img class="icon" src="assets/icons/linkedin.svg" alt="linkedin">
+    </a>
+    <a href="mailto:hdanrlley1@gmail.com" target="_blank">
+      <img class="icon" src="assets/icons/gmail.svg" alt="e-mail">
+    </a>
   </div>
 </div>
 
