--- a/public/resume.html
+++ b/public/resume.html
@@ -43,7 +43,7 @@
   </ul>
 </nav>
 
-<hr class="line" />
+<hr class="line topbar-line" />
 
 
 <main id="resume">
@@ -215,6 +215,18 @@
     </div>
   </div>
 </main>
+  <hr class="line footer-line" />
+<div id="footer">
+  <div class="socials">
+    <a href="https://www.linkedin.com/in/hicaromiguel/" target="_blank">
+      <img class="icon" src="assets/icons/linkedin.svg" alt="linkedin">
+    </a>
+    <a href="mailto:hdanrlley1@gmail.com" target="_blank">
+      <img class="icon" src="assets/icons/gmail.svg" alt="e-mail">
+    </a>
+  </div>
+</div>
+
   </body>
 </html>
 
