--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
           <link rel="stylesheet" href="/assets/css/blog.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/footer.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/globals.css" type="text/css" media="all" />
-          <link rel="stylesheet" href="/assets/css/home.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="/assets/css/index.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/post.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/resume.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/topbar.css" type="text/css" media="all" />
