--- a/public/my-first-post.html
+++ b/public/my-first-post.html
@@ -7,7 +7,7 @@
           <link rel="stylesheet" href="/assets/css/blog.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/footer.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/globals.css" type="text/css" media="all" />
-          <link rel="stylesheet" href="/assets/css/home.css" type="text/css" media="all" />
+          <link rel="stylesheet" href="/assets/css/index.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/post.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/resume.css" type="text/css" media="all" />
           <link rel="stylesheet" href="/assets/css/topbar.css" type="text/css" media="all" />
@@ -48,7 +48,7 @@
 
 <main id="post">
   <div class="header">
-    <h1 class="title">My first post</h1>
+    <h1 class="title">That's a pretty huge name for a blog post</h1>
     <p class="created-at">Hícaro Dânrlley — 06/04/2024</p>
   </div>
   <h1>Hello from first post</h1>
